# nodejsServer/api/controllers/csapiImpl.js
@@ -11,6 +11,7 @@
   It is a good idea to list the modules that your application depends on in the package.json in the project root
  */
 var util = require('util');
+const uuidV1 = require('uuid/v1');
 
 /*
  Once you 'require' a module you can reference the things that it exports.  These are defined in module.exports.
@@ -52,7 +53,7 @@ module.exports = {
   deleteTraining: deleteTraining,
 };
 
-/* var db = {
+var db = {
   account: {},
   parent: {},
   emergCont: {},
@@ -60,17 +61,56 @@ module.exports = {
   training: {},
 };
 
-createRecord(tableName, key, record):
-    if (tableName not in db):
-        db[tableName] = {}
-    if (key not in db):
-        db[tableName][key] = record
-    else:
+function createRecord(tableName, key, idColName, record) {
+  if (!(tableName in db)) {
+    db[tableName] = {};
+  }
+  record[idColName] = key;
+  if (!(key in db[tableName])) {
+    db[tableName][key] = record;
+    return [true, record];
+  } else {
+    return [false, record];
+  }
+}
 
-updateRecord(tableName, key, record)
-deleteRecord(tableName, key)
-findRecord(tableName, key)
-getAllRecordsList(tableName) */
+function updateRecord(tableName, key, record) {
+  if (key in db[tableName]) {
+    db[tableName][key] = record;
+    return [true, record];
+  } else {
+    return [false, record];
+  }
+}
+
+function deleteRecord(tableName, key) {
+  delete db[tableName][key];
+  return [true];
+  /* if (key in db[tableName]) {
+    delete db[tableName][key];
+    return [true];
+  } else {
+    return [false];
+  } */
+}
+
+function getRecord(tableName, key) {
+  if (key in db[tableName]) {
+    return [true, db[tableName][key]];
+  } else {
+    return [false];
+  }
+}
+
+function getAllRecords(tableName) {
+  var list = [];
+  for (var key in db[tableName]) {
+    list.push(db[tableName][key]);
+  }
+  return [true, list];
+}
+
+function addAttrToArray(attrArrName, attribute)
 
 /*
   Functions in a127 controllers used for operations should take two parameters:
@@ -81,128 +121,236 @@ getAllRecordsList(tableName) */
 
 function getAllAccounts(req, res) {
   console.log("req: ", req.swagger.params);
-  var response = getAllRecordsList('account')
-  res.json(response);
+  var resultArray = getAllRecords('account');
+  if (resultArray[0]) {
+    res.json(resultArray[1]);
+  } else {
+    res.status(400).send({"errorCode": "400", "errorDescription": "400 error"});
+  }
 }
 function createAccount(req, res) {
   console.log("req: ", req.swagger.params);
-  var response = {};
-  res.json(response);
+  var resultArray = createRecord('account', uuidV1(), 'accountId', req.swagger.params.account.value);
+  if (resultArray[0]) {
+    res.json(resultArray[1]);
+  } else {
+    res.status(400).send({"errorCode": "400", "errorDescription": "400 error"});
+  }
 }
 function getAccount(req, res) {
   console.log("req: ", req.swagger.params);
-  var response = {};
-  res.json(response);
+  var resultArray = getRecord('account', req.swagger.params.accountId.value);
+  if (resultArray[0]) {
+    res.json(resultArray[1]);
+  } else {
+    res.status(400).send({"errorCode": "400", "errorDescription": "400 error"});
+  }
 }
 function updateAccount(req, res) {
   console.log("req: ", req.swagger.params);
-  var response = {};
-  res.json(response);
+  var resultArray = updateRecord('account', req.swagger.params.accountId.value, req.swagger.params.account.value);
+  if (resultArray[0]) {
+    res.json(resultArray[1]);
+  } else {
+    res.status(400).send({"errorCode": "400", "errorDescription": "400 error"});
+  }
 }
 function deleteAccount(req, res) {
   console.log("req: ", req.swagger.params);
-  var response = {};
-  res.json(response);
+  var resultArray = deleteRecord('account', req.swagger.params.accountId.value);
+  if (resultArray[0]) {
+    res.json("success");
+  } else {
+    res.status(400).send({"errorCode": "400", "errorDescription": "400 error"});
+  }
 }
+
+
 function getAllParents(req, res) {
   console.log("req: ", req.swagger.params);
-  var response = [];
-  res.json(response);
+  var resultArray = getAllRecords('parent');
+  if (resultArray[0]) {
+    res.json(resultArray[1]);
+  } else {
+    res.status(400).send({"errorCode": "400", "errorDescription": "400 error"});
+  }
 }
 function createParent(req, res) {
   console.log("req: ", req.swagger.params);
-  var response = {};
-  res.json(response);
+  var parentObj = req.swagger.params.parent.value;
+  var resultArray = createRecord('parent', uuidV1(), 'parentId', parentObj);
+  var origAccountArray = getRecord('account', parentObj['accountId']);
+  if (resultArray[0] && origAccountArray[0]) {
+    origAccountArray[1]['parentIdArray'].push(resultArray[1]['parentId']);
+    res.json(resultArray[1]);
+  } else {
+    res.status(400).send({"errorCode": "400", "errorDescription": "400 error"});
+  }
 }
 function getParent(req, res) {
   console.log("req: ", req.swagger.params);
-  var response = {};
-  res.json(response);
+  var resultArray = getRecord('parent', req.swagger.params.parentId.value);
+  if (resultArray[0]) {
+    res.json(resultArray[1]);
+  } else {
+    res.status(400).send({"errorCode": "400", "errorDescription": "400 error"});
+  }
 }
 function updateParent(req, res) {
   console.log("req: ", req.swagger.params);
-  var response = {};
-  res.json(response);
+  var resultArray = updateRecord('parent', req.swagger.params.parentId.value, req.swagger.params.parent.value);
+  if (resultArray[0]) {
+    res.json(resultArray[1]);
+  } else {
+    res.status(400).send({"errorCode": "400", "errorDescription": "400 error"});
+  }
 }
 function deleteParent(req, res) {
   console.log("req: ", req.swagger.params);
-  var response = {};
-  res.json(response);
+  var resultArray = deleteRecord('parent', req.swagger.params.parentId.value, req.swagger);
+  if (resultArray[0]) {
+    res.json(resultArray[1]);
+  } else {
+    res.status(400).send({"errorCode": "400", "errorDescription": "400 error"});
+  }
 }
 function getAllEmergConts(req, res) {
   console.log("req: ", req.swagger.params);
   var response = [];
-  res.json(response);
+  var resultArray = [];
+  if (resultArray[0]) {
+    res.json(resultArray[1]);
+  } else {
+    res.status(400).send({"errorCode": "400", "errorDescription": "400 error"});
+  }
 }
 function createEmergCont(req, res) {
   console.log("req: ", req.swagger.params);
-  var response = {};
-  res.json(response);
+  var resultArray = [];
+  if (resultArray[0]) {
+    res.json(resultArray[1]);
+  } else {
+    res.status(400).send({"errorCode": "400", "errorDescription": "400 error"});
+  }
 }
 function getEmergCont(req, res) {
   console.log("req: ", req.swagger.params);
-  var response = {};
-  res.json(response);
+  var resultArray = [];
+  if (resultArray[0]) {
+    res.json(resultArray[1]);
+  } else {
+    res.status(400).send({"errorCode": "400", "errorDescription": "400 error"});
+  }
 }
 function updateEmergCont(req, res) {
   console.log("req: ", req.swagger.params);
-  var response = {};
-  res.json(response);
+  var resultArray = [];
+  if (resultArray[0]) {
+    res.json(resultArray[1]);
+  } else {
+    res.status(400).send({"errorCode": "400", "errorDescription": "400 error"});
+  }
 }
 function deleteEmergCont(req, res) {
   console.log("req: ", req.swagger.params);
-  var response = {};
-  res.json(response);
+  var resultArray = [];
+  if (resultArray[0]) {
+    res.json(resultArray[1]);
+  } else {
+    res.status(400).send({"errorCode": "400", "errorDescription": "400 error"});
+  }
 }
-function getAllPlayers (req, res) {
+function getAllPlayers(req, res) {
   console.log("req: ", req.swagger.params);
   var response = [];
-  res.json(response);
+  var resultArray = [];
+  if (resultArray[0]) {
+    res.json(resultArray[1]);
+  } else {
+    res.status(400).send({"errorCode": "400", "errorDescription": "400 error"});
+  }
 }
 function createPlayer(req, res) {
   console.log("req: ", req.swagger.params);
-  var response = {};
-  res.json(response);
+  var resultArray = [];
+  if (resultArray[0]) {
+    res.json(resultArray[1]);
+  } else {
+    res.status(400).send({"errorCode": "400", "errorDescription": "400 error"});
+  }
 }
 function getPlayer(req, res) {
   console.log("req: ", req.swagger.params);
-  var response = {};
-  res.json(response);
+  var resultArray = [];
+  if (resultArray[0]) {
+    res.json(resultArray[1]);
+  } else {
+    res.status(400).send({"errorCode": "400", "errorDescription": "400 error"});
+  }
 }
 function updatePlayer(req, res) {
   console.log("req: ", req.swagger.params);
-  var response = {};
-  res.json(response);
+  var resultArray = [];
+  if (resultArray[0]) {
+    res.json(resultArray[1]);
+  } else {
+    res.status(400).send({"errorCode": "400", "errorDescription": "400 error"});
+  }
 }
 function deletePlayer(req, res) {
   console.log("req: ", req.swagger.params);
-  var response = {};
-  res.json(response);
+  var resultArray = [];
+  if (resultArray[0]) {
+    res.json(resultArray[1]);
+  } else {
+    res.status(400).send({"errorCode": "400", "errorDescription": "400 error"});
+  }
 }
 function getAllTrainings(req, res) {
   console.log("req: ", req.swagger.params);
   var response = [];
-  res.json(response);
+  var resultArray = [];
+  if (resultArray[0]) {
+    res.json(resultArray[1]);
+  } else {
+    res.status(400).send({"errorCode": "400", "errorDescription": "400 error"});
+  }
 }
 function createTraining(req, res) {
   console.log("req: ", req.swagger.params);
-  var response = {};
-  res.json(response);
+  var resultArray = [];
+  if (resultArray[0]) {
+    res.json(resultArray[1]);
+  } else {
+    res.status(400).send({"errorCode": "400", "errorDescription": "400 error"});
+  }
 }
 function getTraining(req, res) {
   console.log("req: ", req.swagger.params);
-  var response = {};
-  res.json(response);
+  var resultArray = [];
+  if (resultArray[0]) {
+    res.json(resultArray[1]);
+  } else {
+    res.status(400).send({"errorCode": "400", "errorDescription": "400 error"});
+  }
 }
 function updateTraining(req, res) {
   console.log("req: ", req.swagger.params);
-  var response = {};
-  res.json(response);
+  var resultArray = [];
+  if (resultArray[0]) {
+    res.json(resultArray[1]);
+  } else {
+    res.status(400).send({"errorCode": "400", "errorDescription": "400 error"});
+  }
 }
 function deleteTraining(req, res) {
   console.log("req: ", req.swagger.params);
-  var response = {};
-  res.json(response);
+  var resultArray = [];
+  if (resultArray[0]) {
+    res.json(resultArray[1]);
+  } else {
+    res.status(400).send({"errorCode": "400", "errorDescription": "400 error"});
+  }
 }
 
 
